# explainable-ai

./: README.md  pyproject.toml
data/processed/: test.csv  train.csv  uci_creditcard_defaulters.csv
data/raw/: uci_creditcard_defaulters.csv
notebooks/: debug-model-predictions.ipynb  explain-model.ipynb  uncover-model-structure.ipynb
tasks/: prepare-data.py  split-data.py  train-model.py
