[tool.poetry]
name = "explainable-ai-with-dalex"
version = "0.1.0"
description = "Explainable AI demo with Dalex"
authors = ["Willem Meints <willem.meints@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8,<3.10"
pandas = "^1.2.4"
scipy = "^1.6.3"
dalex = "^1.2.0"
scikit-learn = "^0.24.2"
ipykernel = "^5.5.5"
jupyter = "^1.0.0"
statsmodels = "^0.12.2"
lime = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
